[gd_scene load_steps=6 format=3 uid="uid://b5deux0o86kva"]

[ext_resource type="Theme" uid="uid://bwnv8b362a2w7" path="res://menus/menu_theme.tres" id="1_sds2t"]
[ext_resource type="Script" path="res://menus/bonus_levels.gd" id="1_v6dd8"]
[ext_resource type="PackedScene" uid="uid://cgn5lp08830p8" path="res://ui/transition.tscn" id="2_03chk"]
[ext_resource type="Texture2D" uid="uid://cmptyfdc6xnrx" path="res://assets/art/menus/bonus_levels/original_level_thumb.png" id="3_x7kge"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_te4kt"]
texture = ExtResource("3_x7kge")

[node name="bonus_levels" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_sds2t")
script = ExtResource("1_v6dd8")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="original_level" type="Control" parent="CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(288, 128)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="original_level_button" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer/original_level"]
custom_minimum_size = Vector2(288, 128)
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
theme_override_styles/normal = SubResource("StyleBoxTexture_te4kt")

[node name="back_button" type="Button" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 292.0
offset_bottom = 123.0
text = "‚Üê Back"

[node name="transition" parent="." instance=ExtResource("2_03chk")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 1
grow_vertical = 1

[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/original_level/original_level_button" to="." method="_on_original_level_button_pressed"]
[connection signal="pressed" from="back_button" to="." method="_on_back_button_pressed"]
